[package]
name = "atomic_web_push"
version = "0.1.0"
authors = ["hsng95@gmail.com"]
description = "A library that eliminates potential risks (occasional crashes due to OpenSSL library's setenv conflicts in Linux environments) from the web push library"
homepage = "https://github.com/rabbitson87/atomic_web_push"
repository = "https://github.com/rabbitson87/atomic_web_push"
keywords = ["web_push", "alarm", "app_push"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.77"

[dependencies]
tokio = { version = "1.43.0", default-features = false, features = [
    "rt-multi-thread",
] }
async-trait = "0.1.85"
http = "1.2.0"
serde = "1.0.217"
serde_json = "1.0.137"
serde_derive = "1.0.217"
base64 = "0.22.1"
chrono = { version = "0.4.39", features = ["serde"] }
pem = "3.0.4"
sec1_decode = "0.1.0"
log = "0.4.25"
ct-codecs = "1.1.3"
hmac-sha1-compact = "1.1.5"
hmac-sha256 = { version = "1.1.8", features = ["traits010"] }
ed25519-compact = { version = "2.1.1", features = ["pem"] }
p256 = { version = "0.13.2", features = ["ecdsa", "std", "pkcs8", "pem"] }
k256 = { version = "0.13.4", features = ["ecdsa", "std", "pkcs8", "pem"] }
p384 = { version = "0.13.0", features = ["ecdsa", "std", "pkcs8", "pem"] }
coarsetime = "0.1.35"
rand = "0.8.5"
hmac-sha512 = { version = "1.1.6", features = ["traits010", "sha384"] }
zeroize = "1.8.1"
rsa = { version = "0.9.7", features = ["hazmat", "sha2"] }
blake2b_simd = "1.0.2"
sha2 = "0.10.8"
num-bigint = "0.4.6"
generic-array = "1.2.0"
thiserror = "2.0.11"
anyhow = "1.0.95"
signature = "2.2.0"
ece = { version = "2.3.1", default-features = false }

reqwest = { version = "0.12.12", features = [
    "json",
    "rustls-tls",
    "http2",
    "gzip",
], default-features = false, optional = true }
ciborium = { version = "0.2.2", optional = true }

[features]
default = ["reqwest-client"]
reqwest-client = ["reqwest"]

cwt = ["ciborium"]
# optimal = ["boring"]
# Note: to emulate boringssl, "default-features = false" is required in addition to "pure-rust".
wasi-abi2 = ["coarsetime/wasi-abi2"]

[dev-dependencies]
regex = "1.11.1"
lazy_static = "1.5.0"
